--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -169,6 +169,10 @@
       <EmbeddedResource Include="Resources\Textures\Skybox\front.png" />
       <None Remove="log4net.config" />
       <EmbeddedResource Include="log4net.config" />
+      <None Remove="Resources\Textures\tiles\albedo.png" />
+      <EmbeddedResource Include="Resources\Textures\tiles\albedo.png" />
+      <None Remove="Resources\Textures\tiles\roughness.png" />
+      <EmbeddedResource Include="Resources\Textures\tiles\roughness.png" />
     </ItemGroup>
   
 </Project>
