--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net6.0-windows</TargetFramework>
         <RootNamespace>ArchEngine</RootNamespace>
         <OutputType>Exe</OutputType>
         <LangVersion>9</LangVersion>
@@ -15,7 +15,9 @@
       <RuntimeIdentifier>win-x64</RuntimeIdentifier>
       <PublishSingleFile>true</PublishSingleFile>
       <PublishReadyToRun>true</PublishReadyToRun>
-      
+      <SkipGtkInstall>true</SkipGtkInstall>
+      <UseWindowsForms>true</UseWindowsForms>
+     
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -36,7 +38,6 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="freetype2" Version="2.6.0.1" />
-      <PackageReference Include="GtkSharp" Version="3.24.24.38" />
       <PackageReference Include="log4net" Version="2.0.14" />
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
