--- a/layout.ini
+++ b/layout.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace Demo]
 Pos=0,10
-Size=1366,705
+Size=1920,1017
 Collapsed=0
 
 [Window][Debug##Default]
@@ -47,18 +47,64 @@ DockId=0x0000000B,0
 Pos=266,72
 Size=812,468
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000F,0
+
+[Window][     Tools]
+Pos=271,19
+Size=1306,144
+Collapsed=0
+DockId=0x00000013,0
+
+[Window][     Scene]
+Pos=271,165
+Size=1306,705
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][     Hierarchy]
+Pos=3,19
+Size=266,501
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][     Inspector]
+Pos=1579,19
+Size=338,999
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][     Arch Console]
+Pos=271,872
+Size=1306,146
+Collapsed=0
+DockId=0x00000015,0
+
+[Window][     Assets]
+Pos=3,522
+Size=266,496
+Collapsed=0
+DockId=0x00000012,0
 
 [Docking][Data]
-DockSpace         ID=0x6D3A3A6E Window=0x091AB4BE Pos=3,19 Size=1360,687 Split=Y
-  DockNode        ID=0x00000005 Parent=0x6D3A3A6E SizeRef=794,441 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=152,582 Split=Y Selected=0x788BAA0D
-      DockNode    ID=0x0000000A Parent=0x00000001 SizeRef=149,161 Selected=0x788BAA0D
-      DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=149,278 Selected=0x7E7D78B8
-    DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=640,582 Split=X
-      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=812,422 Split=Y Selected=0x18B8C0DE
-        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=339,51 Selected=0x2B3BF173
-        DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=339,388 CentralNode=1 Selected=0x18B8C0DE
-      DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=283,582 Selected=0xF02CD328
-  DockNode        ID=0x00000006 Parent=0x6D3A3A6E SizeRef=794,139 Selected=0x3692010F
+DockSpace                 ID=0x6D3A3A6E Window=0x091AB4BE Pos=3,19 Size=1914,999 Split=X
+  DockNode                ID=0x00000007 Parent=0x6D3A3A6E SizeRef=652,582 Split=X
+    DockNode              ID=0x0000000D Parent=0x00000007 SizeRef=110,582 Split=Y Selected=0xE0D3A3B6
+      DockNode            ID=0x00000011 Parent=0x0000000D SizeRef=135,240 Selected=0xE0D3A3B6
+      DockNode            ID=0x00000012 Parent=0x0000000D SizeRef=135,238 Selected=0xD9C33D99
+    DockNode              ID=0x0000000E Parent=0x00000007 SizeRef=540,582 Split=Y
+      DockNode            ID=0x00000005 Parent=0x0000000E SizeRef=794,441 Split=X
+        DockNode          ID=0x00000001 Parent=0x00000005 SizeRef=152,582 Split=Y Selected=0x788BAA0D
+          DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=149,161 Selected=0x788BAA0D
+          DockNode        ID=0x0000000B Parent=0x00000001 SizeRef=149,278 Selected=0x7E7D78B8
+        DockNode          ID=0x00000004 Parent=0x00000005 SizeRef=640,582 Split=X
+          DockNode        ID=0x00000002 Parent=0x00000004 SizeRef=812,422 Split=Y Selected=0x18B8C0DE
+            DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=339,51 Selected=0x2B3BF173
+            DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=339,388 Split=Y Selected=0xC1DB803A
+              DockNode    ID=0x00000013 Parent=0x00000009 SizeRef=523,69 Selected=0xF258B197
+              DockNode    ID=0x00000014 Parent=0x00000009 SizeRef=523,409 Split=Y Selected=0xC1DB803A
+                DockNode  ID=0x0000000F Parent=0x00000014 SizeRef=1306,705 CentralNode=1 Selected=0xC1DB803A
+                DockNode  ID=0x00000015 Parent=0x00000014 SizeRef=1306,146 Selected=0x4BEB72E9
+          DockNode        ID=0x00000003 Parent=0x00000004 SizeRef=283,582 Selected=0xF02CD328
+      DockNode            ID=0x00000006 Parent=0x0000000E SizeRef=794,139 Selected=0x3692010F
+  DockNode                ID=0x0000000C Parent=0x6D3A3A6E SizeRef=140,582 Selected=0x6874DA93
 
