--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -33,6 +33,7 @@
 
     <ItemGroup>
       <PackageReference Include="AssimpNet" Version="4.1.0" />
+      <PackageReference Include="BulletSharp" Version="0.11.1" />
       <PackageReference Include="Costura.Fody" Version="5.7.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
