--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -17,7 +17,7 @@
       <PublishReadyToRun>true</PublishReadyToRun>
       <SkipGtkInstall>true</SkipGtkInstall>
       <UseWindowsForms>true</UseWindowsForms>
-     
+     <Version>1.3.5</Version>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
